# achat

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  install.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
skills/: achat.skill
skills/achat/: SKILL.md
src/: daemon.rs  discovery.rs  ipc.rs  lib.rs  main.rs  protocol.rs  storage.rs  transport.rs  util.rs
tests/: cli_basic.rs  cli_daemon.rs
