[package]
name = "achat"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Minimal LAN agent-to-agent messaging for AI coding assistants"
license = "Apache-2.0"
repository = "https://github.com/quadra-a/achat"
readme = "README.md"
keywords = ["agent", "messaging", "lan", "cli", "p2p"]
categories = ["command-line-utilities", "network-programming"]
exclude = ["skills/"]

[[bin]]
name = "achat"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "signal", "sync", "time"] }
mdns-sd = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Defensive lints
wildcard_enum_match_arm = "warn"
fn_params_excessive_bools = "warn"
